benerin width mobile phone

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
               <img
                 src="img/ihsanindya.png"
                 alt="ihsanindya"
-                class="max-w-full mx-auto brightness-125 rounded-full"
+                class="relative z-10 mx-auto max-w-full"
               />
               <span
-                class="absolute -bottom-[2rem] left-[7rem] -translate-x-10 -z-10 md:left-[16rem] md:scale-105 lg:left-[7rem] lg:translate-x-1 lg:scale-125 lg:bottom-1"
+                class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125"
               >
                 <svg
                   width="400"
