--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <img
                 src="img/ihsanindya.png"
                 alt="ihsanindya"
-                class="relative z-10 mx-auto max-w-full"
+                class="relative z-10 mx-auto max-w-full brightness-125"
               />
               <span
                 class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125"
