--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
             > -->
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
-            <div class="mt-10 relative lg:mt-0 lg:right-0">
+            <div class="relative mt-10 lg:right-0 lg:mt-9">
               <img
                 src="img/ihsanindya.png"
                 alt="ihsanindya"
-                class="relative z-10 mx-auto max-w-full brightness-125"
+                class="relative z-10 mx-auto max-w-full brightness-125 rounded-full"
               />
               <span
-                class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125"
+                class="absolute bottom-0 left-1/2 -translate-x-1/2 scale-75 md:scale-110"
               >
                 <svg
                   width="400"
