--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bby</title>
+    <title>Bby💙</title>
     <link href="src/output.css" rel="stylesheet" />
   </head>
   <body>
@@ -73,7 +73,7 @@
     <!-- header end -->
 
     <!-- hero section start -->
-    <section id="home" class="pt-36 pb-[8rem]">
+    <section id="home" class="pt-36 pb-10 lg:pb-32">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
@@ -131,7 +131,7 @@
     <!-- hero section end -->
 
     <!--  about section start -->
-    <section id="about" class="pt-36 pb-64 lg:pb-32">
+    <section id="about" class="pt-36 pb-5 lg:pb-14">
       <div class="container">
         <div class="flex flex-wrap flex-row-reverse">
           <div class="w-full px-4 mb-10 lg:w-1/2">
@@ -166,28 +166,13 @@
             </p>
           </div>
 
-          <div
-            class="relative w-full px-4 flex flex-wrap justify-center lg:w-1/2 lg:absolute lg:left-0 lg:my-20"
-          >
+          <div class="flex mx-auto">
             <img
-              src="img/tentang-kita-img/ican.jpeg"
-              alt="cute-ican"
-              width="160"
-              class="rounded-md shadow-md mr-20"
+              src="img/tentang-kita-img/1-about.png"
+              alt="cute-kita"
+              width="600"
+              height="600"
             />
-            <img
-              src="img/tentang-kita-img/cute-bby.jpeg"
-              alt="cute-bby"
-              width="160"
-              class="rounded-md shadow-md"
-            />
-            <div class="absolute top-32 size-[250px] lg:size-[300px]">
-              <img
-                src="img/tentang-kita-img/tgn.jpeg"
-                alt="tgn"
-                class="rounded-md shadow-md"
-              />
-            </div>
           </div>
         </div>
       </div>
@@ -301,8 +286,11 @@
             Blue Flower on Bbyy Birthday 💙
           </h3>
           <p class="font-medium text-base text-secondary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-            dolores omnis minus, ipsam odit cupiditate.
+            Bbyy suka sekali dengan bunga apa lagi bunga berwarna biru, karena
+            biru adalah warna favorit bbyy dan juga melambangkan kesetiaan dan
+            cinta yang abadi, ceneng banget bisa liat bbyy bahagia di hari ulang
+            tahunnya🥰💙🫶, sekali lagi semoga next year kita bisa rayain bareng
+            secara langsung yaa bbyy..aamiin🤲
           </p>
         </div>
       </div>
