nambahin love di about

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               Namun, yakinlah bahwa tinta cinta kita akan terus mengalir,
               menuliskan kisah indah yang penuh dengan kebahagiaan dan kasih
               sayang. Ihsan dan Nindya, dua hati yang terikat dalam cinta yang
-              abadi.
+              abadi.💙
             </p>
           </div>
 
